--- a/app/src/main/res/layout/fragment_chat_company.xml
+++ b/app/src/main/res/layout/fragment_chat_company.xml
@@ -4,31 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.companypage.ui.ChatCompany.ChatCompanyFragment">
+    tools:context=".ui.applicantpage.ui.chat.ChatFragment">
 
-    <com.google.android.material.appbar.CollapsingToolbarLayout
-        android:id="@+id/collapsingToolbarLayout"
+    <TextView
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:contentScrim="@android:color/transparent"
-        app:expandedTitleGravity="center"
-        app:expandedTitleMarginBottom="16dp"
-        app:expandedTitleMarginEnd="64dp"
-        app:expandedTitleMarginStart="64dp"
-        app:expandedTitleMarginTop="16dp"
+        android:fontFamily="@font/lato_bold"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:text="Messages"
+        android:textColor="@color/black"
+        android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_collapseMode="pin"
-            app:title="Message" />
-
-    </com.google.android.material.appbar.CollapsingToolbarLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/Text_test"
@@ -52,7 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:startIconDrawable="@drawable/ic_search"
         app:boxStrokeWidth="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/collapsingToolbarLayout">
+        app:layout_constraintTop_toBottomOf="@+id/title_bar">
 
         <com.google.android.material.textfield.TextInputEditText
 
@@ -60,7 +50,7 @@
             android:layout_height="70dp"
             android:background="@drawable/search_bar"
             app:cornerRadius="10dp"
-            android:hint="Search Employee"
+            android:hint="Search Employees"
             android:fontFamily="@font/lato"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textInputLayout"
@@ -76,6 +66,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_bar" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
